# netmeasure

./: .coveragerc  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  quality.yml  tests.yml
netmeasure/: __main__.py  cli.py  measurements.py  netmeasure.py
netmeasure/measurements/base/: measurements.py
netmeasure/measurements/download_speed/: measurements.py  results.py
netmeasure/measurements/download_speed/tests/: test_measurements.py
netmeasure/measurements/ip_route/tests/: test_measurements.py
netmeasure/measurements/latency/tests/: test_measurements.py
netmeasure/measurements/netflix_fast/: measurements.py
netmeasure/measurements/netflix_fast/tests/: test_measurements.py
netmeasure/measurements/speedtest_dotnet/: measurements.py
netmeasure/measurements/speedtest_dotnet/tests/: test_measurements.py
netmeasure/measurements/speedtestdotnet/: measurements.py  results.py
netmeasure/measurements/webpage_download/: measurements.py  results.py
netmeasure/measurements/youtube/: measurements.py  results.py
netmeasure/measurements/youtube_download/: measurements.py
netmeasure/plugins/download_speed/: measurements.py  results.py
netmeasure/plugins/ip_route/: measurements.py  results.py
netmeasure/plugins/latency/: measurements.py  results.py
netmeasure/plugins/netflix_fast/: measurements.py  results.py
netmeasure/plugins/speedtestdotnet/: measurements.py  results.py
netmeasure/plugins/webpage_download/: measurements.py  results.py
netmeasure/plugins/youtube/: measurements.py  results.py
(+11 files in other folders)
