[tool.poetry]
name = "netmeasure"
version = "1.0"
description = "A tool for measuring Internet connection quality in a structured way."
authors = [
    "James Stewart <james@amorphitec.io>",
    "Stuart Dines <me@stuartdines.com>",
    "James Johnson <jamesaj2323@gmail.com>"
]
maintainers = [
    "James Stewart <james@amorphitec.io>",
]
packages = [
    { include = "measurement" },
]
repository = "https://github.com/amorphitec/netmeasure"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4"
validators = "^0.20"
speedtest-cli = "^2.1"
requests = "^2.28"
youtube_dl = "^2021.12.17"
scapy = "^2.5"
beautifulsoup4 = "^4.11.2"
click = "^8.1.3"
exitstatus = "^2.3.0"
[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
tox = "^3.13"
flake8 = "^3.7"
isort = "^4.3"
pytest-cov = "^4.0"
black = "^23.1"
bandit = "^1.6.2"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
skipsdist = true
envlist = py35,py36,py37,py38

[gh-actions]
python =
    3.5: py35
    3.6: py36
    3.7: py37
    3.8: py38, mypy

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest --cov
"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

